--- a/ImageClassificationTool/ImageClassificationTool.ipynb
+++ b/ImageClassificationTool/ImageClassificationTool.ipynb
@@ -181,23 +181,20 @@
     "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "# Load the CSV file\n",
     "df = pd.read_csv('fruit_images.csv')\n",
     "\n",
-    "# Function to preprocess images\n",
     "def preprocess_image(image_path):\n",
     "    try:\n",
-    "        img = Image.open(image_path).convert('L')  # Convert to grayscale\n",
-    "        img = img.resize((64, 64), Image.LANCZOS)  # Resize to 64x64 pixels\n",
+    "        img = Image.open(image_path).convert('L')  \n",
+    "        img = img.resize((64, 64), Image.LANCZOS)  \n",
     "        img = np.array(img)\n",
-    "        img = img / 255.0  # Normalize pixel values\n",
-    "        img = img.flatten()  # Flatten the image\n",
+    "        img = img / 255.0  \n",
+    "        img = img.flatten()  \n",
     "        return img\n",
     "    except Exception as e:\n",
     "        print(f\"Error processing image {image_path}: {e}\")\n",
     "        return None\n",
     "\n",
-    "# Preprocess all images and prepare data\n",
     "X = []\n",
     "y = []\n",
     "for index, row in df.iterrows():\n",
@@ -215,11 +212,9 @@
     "    X = np.array(X)\n",
     "    y = np.array(y)\n",
     "\n",
-    "    # Encode labels\n",
     "    le = LabelEncoder()\n",
     "    y = le.fit_transform(y)\n",
     "\n",
-    "    # Split the data into training and testing sets (80% train, 20% test)\n",
     "    try:\n",
     "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "    except ValueError as e:\n",
@@ -227,13 +222,10 @@
     "        X_train, X_test, y_train, y_test = None, None, None, None\n",
     "\n",
     "    if X_train is not None:\n",
-    "        # Initialize the SVC model\n",
     "        model = SVC(kernel='linear')  # You can choose other kernels like 'rbf'\n",
     "\n",
-    "        # Train the model\n",
     "        model.fit(X_train, y_train)\n",
     "\n",
-    "        # Evaluate the model\n",
     "        y_pred = model.predict(X_test)\n",
     "        accuracy = accuracy_score(y_test, y_pred)\n",
     "        print(f'Accuracy: {accuracy:.2f}')\n",
@@ -242,7 +234,6 @@
     "        print('Classification Report:')\n",
     "        print(classification_report(y_test, y_pred))\n",
     "\n",
-    "        # Predict on new data (example values)\n",
     "        new_image1_path = 'images/testimage1-greenapple.jpeg'\n",
     "        new_image2_path = 'images/testimage2-apples.jpeg'\n",
     "        new_image3_path = 'images/testimage3-apple.jpeg'\n",
